# RockPaperScissors

./: .gitignore  README.md  pyproject.toml
RockPaperScissors/: __main__.py  game.py  prompts.py  rps.py  scoreboard.py
rps/: __main__.py  rps.py
