[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RockPaperScissors"
version = "1.0.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[project.scripts]
RockPaperScissors = "RockPaperScissors.__main__:main"
